--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "sample",
+  "name": "cloud",
   "version": "0.1.0",
   "private": true,
+  "main":"index.html",
+  "homepage":"./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,13 +14,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "dev": "BROWSER=none nodemon index.js",
-    "build": "react-scripts build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
