--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -2,19 +2,20 @@
   "name": "cloud",
   "version": "0.1.0",
   "private": true,
-  "main":"index.html",
-  "homepage":"./",
+  "main": "index.html",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
+    "framer-motion": "^12.6.2",
     "nth-check": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
